--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validation</title>
+    <title> Validation form </title>
 <style>
 body{
-    background-color: #3498db;
+    background-color: cyan;
     display: flex;
     justify-content:center ;
     align-items: center;
     height: 100vh;
 }
 #form-container{
-    background-color: white;
+    background-color: red;
     padding: 50px;
     text-align: center;
 }
