--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <title> Validation form </title>
 <style>
 body{
-    background-color: cyan;
+    background-color: grey;
     display: flex;
     justify-content:center ;
     align-items: center;
     height: 100vh;
 }
 #form-container{
-    background-color: red;
+    background-color: white;
     padding: 50px;
     text-align: center;
 }
 h2{
     margin: 0px 0px 10px 0px;
+    font-size: 20px;
 }
 input{
     width: 200px;
@@ -28,7 +29,7 @@ input{
 }
 input[type = "submit"]{
     width: 150px;
-    background-color:  #3498db;
+    background-color: red;
     border:red ;
     border-radius: 20px;
     color: white;
