--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <title> Validation form </title>
 <style>
 body{
-    background-color: cyan;
+    background-color: black;
     display: flex;
     justify-content:center ;
     align-items: center;
     height: 100vh;
 }
 #form-container{
-    background-color: red;
+    background-color: white;
     padding: 50px;
     text-align: center;
+    border-radius: 10px;
 }
 h2{
     margin: 0px 0px 10px 0px;
+    font-size: 30px;
 }
 input{
     width: 200px;
